# Gisto

./: .angular-cli.json  .babelrc  .bowerrc  .codeclimate.yml  .editorconfig  .env  .env.example  .eslintcache  .eslintignore  .eslintrc  .gitignore  .gitmodules  .htaccess  .pnpmrc  .prettierrc  .travis.yml  AGENTS.md  CHANGELOG.md  CI.sh  COMMIT_GUIDELINES.md  Dockerfile  Gruntfile.js  LICENSE  README.md  all.js.map  angular.json  appveyor.yml  azure-pipelines.yml  bower.json  change-log-builder.sh  changelog.md  circle.yml  cliff.toml  codecov.yml  commitlint.config.cjs  commitlint.config.js  docker-compose.yml  droneIO.sh  electron-builder-prerelease.json  electron-builder.json  (+28 more)
.github/: FUNDING.yml  dependabot.yml
.husky/: commit-msg  post-commit  pre-commit  pre-push
__mocks__/: electron.js  localStorage.js  settings.js  snippets.js
api/: package.json  server.js
app/: app.html  app.nw  config.example.json  config.json.sample  config.xml  experimental.html  gists.json  index.html  login.html  package.json  snapshot.js  version
docs/: .eslintrc  .gitignore  .prettierrc  README.md  gatsby-config.js  gatsby-node.js  package-lock.json  package.json
e2e/: app.e2e-spec.ts  sanity.spec.ts  shortcuts.spec.ts  snippets.spec.ts  test-utils.ts  translations.spec.ts
js/: all.js.map
nbproject/: project.properties  project.xml
playwright-report/: index.html
public/: manifest.json
server/: app.js  config.example.js  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon-alpha.icns  icon.icns
src-tauri/src/: lib.rs
(+771 files in other folders)
