[package]
name = "Gisto"
description = "Cross-platform snippets management desktop application"
authors = ["Sasha Khamkov"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

tauri = { version = "2.5", features = [] }

tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-fs = "=2.4.5"
tauri-plugin-opener = "=2.5.2"
tauri-plugin-process = "=2.3.1"
tauri-plugin-updater = "=2.9.0"
tauri-plugin-window-state = "=2.4.1"
